Add auto version update and improve mobile notifications

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>📈 주식 시세 <span class="version-badge">v3</span></h1>
+            <h1>📈 주식 시세 <span class="version-badge" id="versionBadge">v3</span></h1>
             <button id="refreshBtn" class="refresh-btn" aria-label="새로고침">🔄</button>
         </header>
 
