Fix version to show build time instead of real-time update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="주식 현재 시세를 실시간으로 확인하는 PWA">
     <meta name="theme-color" content="#2196F3">
+    <meta name="app-version" content="">
     <title>주식 시세 PWA</title>
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./styles.css">
@@ -13,7 +14,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>📈 주식 시세 <span class="version-badge" id="versionBadge">v3</span></h1>
+            <h1>📈 주식 시세 <span class="version-badge" id="versionBadge"></span></h1>
             <button id="refreshBtn" class="refresh-btn" aria-label="새로고침">🔄</button>
         </header>
 
